--- a/choose.ui
+++ b/choose.ui
@@ -89,6 +89,19 @@
     <string/>
    </property>
   </widget>
+  <widget class="QLabel" name="whoWin">
+   <property name="geometry">
+    <rect>
+     <x>60</x>
+     <y>10</y>
+     <width>161</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
