--- a/form.ui
+++ b/form.ui
@@ -6,26 +6,26 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>600</width>
-    <height>400</height>
+    <width>350</width>
+    <height>370</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>300</width>
-    <height>200</height>
+    <width>350</width>
+    <height>370</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>600</width>
-    <height>400</height>
+    <width>350</width>
+    <height>370</height>
    </size>
   </property>
   <property name="sizeIncrement">
    <size>
     <width>600</width>
-    <height>400</height>
+    <height>300</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -36,17 +36,13 @@
     <normaloff>C:/Users/User/Pictures/download.jpg</normaloff>C:/Users/User/Pictures/download.jpg</iconset>
   </property>
   <property name="styleSheet">
-   <string notr="true">QFrame
-{
- backraund:#333;
-}
-</string>
+   <string notr="true"/>
   </property>
   <widget class="QFrame" name="frame">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>80</y>
+     <x>20</x>
+     <y>60</y>
      <width>311</width>
      <height>301</height>
     </rect>
@@ -155,7 +151,7 @@ color:#717072;
      <string> LOGIN HERE</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="userImages">
+   <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
       <x>20</x>
@@ -175,8 +171,8 @@ color:#717072;
   <widget class="QToolButton" name="toolButton">
    <property name="geometry">
     <rect>
-     <x>170</x>
-     <y>40</y>
+     <x>150</x>
+     <y>20</y>
      <width>81</width>
      <height>71</height>
     </rect>
