--- a/choose.ui
+++ b/choose.ui
@@ -35,6 +35,24 @@
    <iconset>
     <normaloff>C:/Users/User/Pictures/download.jpg</normaloff>C:/Users/User/Pictures/download.jpg</iconset>
   </property>
+  <property name="styleSheet">
+   <string notr="true">
+background: #333;
+
+QPushButton 
+{
+background: red;
+border-radius: 15px;
+color: white;
+}
+QPushButton:hover
+{
+background: #49obff;
+border-radius: 15px;
+color: red;
+}
+</string>
+  </property>
   <widget class="QPushButton" name="exit">
    <property name="geometry">
     <rect>
@@ -50,6 +68,20 @@
      <height>0</height>
     </size>
    </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton 
+{
+background: red;
+border-radius: 15px;
+color: white;
+}
+QPushButton:hover
+{
+background: #49obff;
+border-radius: 15px;
+color: red;
+}</string>
+   </property>
    <property name="text">
     <string>Exit</string>
    </property>
@@ -58,10 +90,24 @@
    <property name="geometry">
     <rect>
      <x>60</x>
-     <y>50</y>
+     <y>40</y>
      <width>161</width>
-     <height>29</height>
+     <height>31</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton 
+{
+background: red;
+border-radius: 15px;
+color: white;
+}
+QPushButton:hover
+{
+background: #49obff;
+border-radius: 15px;
+color: red;
+}</string>
    </property>
    <property name="text">
     <string>Restart</string>
@@ -73,8 +119,22 @@
      <x>60</x>
      <y>90</y>
      <width>161</width>
-     <height>29</height>
+     <height>31</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton 
+{
+background: red;
+border-radius: 15px;
+color: white;
+}
+QPushButton:hover
+{
+background: #49obff;
+border-radius: 15px;
+color: red;
+}</string>
    </property>
    <property name="text">
     <string>Get information </string>
