--- a/form.ui
+++ b/form.ui
@@ -42,9 +42,9 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>60</y>
-     <width>311</width>
-     <height>301</height>
+     <y>40</y>
+     <width>301</width>
+     <height>311</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -92,7 +92,7 @@ color:#717072;
        <item>
         <widget class="QLineEdit" name="Age">
          <property name="text">
-          <string>            Age</string>
+          <string>Age</string>
          </property>
         </widget>
        </item>
@@ -112,7 +112,7 @@ color:#717072;
        <item>
         <widget class="QLineEdit" name="Nick">
          <property name="text">
-          <string>        Nickname      </string>
+          <string>Nickname      </string>
          </property>
         </widget>
        </item>
@@ -123,14 +123,7 @@ color:#717072;
        <item>
         <widget class="QLabel" name="label_2">
          <property name="text">
-          <string>            Age</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QLabel" name="label">
-         <property name="text">
-          <string>        Nickname      </string>
+          <string/>
          </property>
         </widget>
        </item>
@@ -141,11 +134,14 @@ color:#717072;
    <widget class="QLabel" name="LoginLabel">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>40</y>
-      <width>121</width>
+      <x>110</x>
+      <y>60</y>
+      <width>91</width>
       <height>20</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">color: white;</string>
     </property>
     <property name="text">
      <string> LOGIN HERE</string>
@@ -171,10 +167,10 @@ color:#717072;
   <widget class="QToolButton" name="toolButton">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>20</y>
-     <width>81</width>
-     <height>71</height>
+     <x>130</x>
+     <y>0</y>
+     <width>91</width>
+     <height>81</height>
     </rect>
    </property>
    <property name="styleSheet">
